Fix word wrap on collapsibles

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,3 +17,10 @@
 @import "materialize/components/color";
 $primary-color: color("blue", "lighten-2") !default;
 @import 'materialize';
+
+
+
+.collapsible-header {
+  white-space: normal;
+  height: auto!important;
+}
